# weaver

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  alembic.ini  coverage.xml  llm.md  main.py  pyproject.toml  pytest.ini
.github/workflows/: tests.yml
config/: llm.example.toml  llm.prod.toml  llm.toml  pipeline.example.toml  pipeline.toml  settings.example.toml  settings.toml
config/mappings/: example.yaml
config/migrations/: example.yaml
config/prompts/: analyze.toml  categorizer.toml  chat.toml  classifier.toml  cleaner.toml  community_report.toml  credibility_checker.toml  entity_extractor.toml  entity_resolver.toml  merger.toml  quality_scorer.toml  search_global.toml  search_local.toml
config/prompts/memory/: causal_inference.md
core/db/: models.py
doc/: dev.md  neo4j-detail.md  test.md
docker/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
docs/: API.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  MAGMA_INTEGRATION_GUIDE.md  MONITORING.md  TESTING.md  USER_GUIDE.md  api.md  architecture.md  community-guide.md  data-consistency-repair.md  database_integrity_report_36kr.md  deployment.md  monitoring.md  testing.md
docs/deployment/: database-migration-plan.md
docs/migration/: README.md  api-reference.md  cli-reference.md  custom-mappings.md  type-mapping.md
docs/security/: SECURITY_HARDENING.md
docs/superpowers/plans/: 2026-04-01-comprehensive-testing-validation.md
modules/storage/: article_repo.py
monitoring/grafana/dashboards/: README.md  circuit-breaker-status.json  database-consistency.json  system-health-overview.json
monitoring/prometheus/: README.md  alerts.yml
openspec/changes/comprehensive-code-review-remediation/: tasks.md
openspec/changes/url-security-module/: tasks.md
scripts/: README.md  build_nuitka.py  check_logging_usage.py  cleanup_analysis.md  db_query.py  evaluate.py  evaluate_search_quality.py  http_audit.py  insert_test_data.py  manage.py  migrate_related_to_edges.py  reset_test_env.sh  run_36kr_full_pipeline.py  run_full_pipeline.py  run_performance_tests.py  run_pipeline_mock.py  seed_relation_types.py  start.sh  test_api.py  test_api_endpoints.py  test_full_pipeline.py  test_pipeline.py  test_pipeline_api.py  test_pipeline_duckdb.py  test_pipeline_duckdb_ladybug.py  test_pipeline_rss.py  test_rss_pipeline.py  test_stealth.py  validate_environment.py  validate_glm_integration.py
scripts/rollback/: README.md  master_rollback.sh  rollback_health_endpoint.sh  rollback_hnsw_index.sh  rollback_saga_pattern.sh
src/: container.py  main.py
src/alembic/: env.py
src/alembic/versions/: 001_initial.py  01_initial.py  02_llm_failures.py  03_remove_article_entities.py  04_source_credibility.py  05_drop_orphan_tables.py  05_pending_sync.py  06_llm_usage.py  20260313_add_processing_fields.py  20260318_add_task_id_to_articles.py  c619ab9ba95a_add_quality_score_to_articles.py  e283f4aed36a_add_hnsw_indexes_to_vector_tables.py  f23755e6c748_add_relation_type_tables.py  f26c1d1ee6c3_merge_multiple_heads.py
src/api/: __init__.py  dependencies.py  router.py
src/api/endpoints/: __init__.py  (+12 more)
src/config/: __init__.py  settings.example.toml  settings.py  settings.toml  subconfigs.py
src/core/: __init__.py  constants.py  exceptions.py
src/modules/: __init__.py
src/scripts/: dev.sh  process_pending.py  start.sh  test_pipeline_duckdb.py  test_pipeline_rss.py
src/tests/: conftest.py
tests/: __init__.py  conftest.py  factories.py  helpers.py
tests/config/: test_settings.py
tests/e2e/: README.md  __init__.py  conftest.py  docker-compose.yml  test_api_user_flows.py  test_articles.py  test_community_detection.py  test_env.env  test_full_pipeline.py  test_health.py  test_pipeline.py  test_search.py  test_sources.py  test_workflows.py
tests/integration/: conftest.py  test_api_integration.py  test_article_repo.py  test_article_task_tracking.py  test_batch_writer_integration.py  test_cleanup_behavior.py  test_community_integration.py  test_db_initializer.py  test_drift_search.py  test_global_search_community.py  test_global_search_regression.py  test_graph_metrics_integration.py  test_health_integration.py  test_integration.py  test_llm_failure_integration.py  test_llm_usage_pipeline.py  test_neo4j_entity_repo.py  test_neo4j_sync_integration.py  test_otel_integration.py  test_pipeline_integration.py  test_pipeline_nodes.py  test_pipeline_nodes_extended.py  test_port_detection_integration.py  test_prometheus_integration.py  test_search_enhanced.py  test_search_integration.py  test_source_integration.py  test_ssrf_protection.py  test_task_progress_stats.py  test_text_unit_integration.py  test_vector_repo.py
tests/manual/: test_stealth.py
tests/performance/: __init__.py  run_performance_tests.py  test_community_detection_performance.py  test_embedding_cache_performance.py  test_hnsw_performance.py  test_llm_cost_evaluation.py  test_search_benchmark.py
tests/scripts/: llm_usage_api_report.txt  test_quality_monitor.py  verify_llm_usage_api.py
tests/unit/: README.md  test_analyze.py  test_anthropic_provider.py  test_api.py  test_api_auth.py  test_api_rate_limit.py  test_article_repo.py  test_article_repo_extra.py  test_article_task_tracking.py  test_articles_endpoint.py  test_batch_writer.py  test_cancel_all_tasks_edge_cases.py  test_categorizer.py  test_circuit_breaker.py  test_circuit_breaker_thread_safety.py  test_classifier.py  test_collector_models.py  test_collector_processor.py  test_communities_api.py  test_community_auto_scheduling.py  test_community_report.py  test_community_scheduler.py  test_context_builder.py  test_core.py  test_crawler.py  test_credibility_calc.py  test_credibility_checker.py  test_db_initializer.py  test_deduplicator.py  test_drift_search.py  test_edge_query_semantic.py  test_embedding_provider.py  test_entity_extractor.py  test_entity_resolver.py  test_event_bus_sharing.py  test_fetcher_rate_limiter.py  test_global_context.py  test_global_search.py  test_graph_metrics.py  test_graph_relation_api.py  (+57 more)
(+667 files in other folders)
