[project]
name = "weaver"
version = "0.1.0"
description = "Weaver - 智能资讯发掘与知识图谱构建平台"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "apscheduler>=3.11.2",
    "asyncpg>=0.31.0",
    "dependency-injector>=4.48.3",
    "fastapi>=0.135.1",
    "feedparser>=6.0.12",
    "httpx>=0.28.1",
    "langchain>=1.2.12",
    "langchain-anthropic>=0.3.0",
    "langchain-core>=0.3.29",
    "langchain-openai>=1.1.11",
    "langgraph>=1.1.2",
    "neo4j==5.18.0",
    "numpy>=2.4.3",
    "opentelemetry-instrumentation-fastapi>=0.61b0",
    "opentelemetry-sdk>=1.40.0",
    "pgvector>=0.4.2",
    "playwright>=1.58.0",
    "playwright-stealth>=2.0.2",
    "prometheus-client>=0.24.1",
    "pydantic-settings>=2.13.1",
    "redis[hiredis]>=7.3.0",
    "slowapi>=0.1.9",
    "spacy>=3.8.11",
    "sqlalchemy[asyncio]>=2.0.48",
    "loguru",
    "tiktoken>=0.12.0",
    "trafilatura>=2.0.0",
    "uvicorn[standard]>=0.41.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "anyio>=4.12.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "testcontainers>=4.14.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore:The pynvml package is deprecated:FutureWarning:torch.cuda",
    "ignore:Can't initialize NVML:UserWarning:torch.cuda",
    "ignore:Stealth has already been applied:UserWarning:playwright_stealth",
]
